--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>me.qpneruy</groupId>
-  <artifactId>TimerPro</artifactId>
+  <artifactId>CSTimerPro</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
@@ -78,6 +78,11 @@
           <artifactId>paper-api</artifactId>
           <version>1.18.2-R0.1-SNAPSHOT</version>
           <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>joda-time</groupId>
+          <artifactId>joda-time</artifactId>
+          <version>2.12.6</version>
       </dependency>
       <dependency>
           <groupId>me.clip</groupId>
