--- a/pom.xml
+++ b/pom.xml
@@ -80,9 +80,9 @@
           <scope>provided</scope>
       </dependency>
       <dependency>
-          <groupId>joda-time</groupId>
-          <artifactId>joda-time</artifactId>
-          <version>2.12.6</version>
+          <groupId>net.kyori</groupId>
+          <artifactId>adventure-api</artifactId>
+          <version>4.15.0</version>
       </dependency>
       <dependency>
           <groupId>me.clip</groupId>
