--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>me.qpneruy</groupId>
   <artifactId>CSTimerPro</artifactId>
-  <version>1.1</version>
+  <version>1.5</version>
   <packaging>jar</packaging>
 
   <name>TimerPro</name>
@@ -18,13 +18,39 @@
 
   <build>
     <plugins>
+        <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>me.qpneruy.timer plugin.TimerPro</mainClass>
+                    </manifest>
+                </archive>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+                <outputDirectory>C:\Users\huuti\Desktop\server\plugins</outputDirectory>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>make-assembly</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
+            <source>9</source>
+            <target>9</target>
+<!--          <source>21</source>-->
+<!--          <target>21</target>-->
+<!--            <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
         </configuration>
       </plugin>
 <!--      <plugin>-->
@@ -44,9 +70,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
             <version>3.3.0</version>
-            <configuration>
-                <outputDirectory>C:\Users\huuti\OneDrive - literyBan\Attachments\Desktop1\server\plugins</outputDirectory>
-            </configuration>
+<!--r-->
         </plugin>
     </plugins>
     <resources>
@@ -90,5 +114,37 @@
           <version>2.11.5</version>
           <scope>provided</scope>
       </dependency>
-  </dependencies>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.13.1</version>
+          <scope>compile</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.17.1</version>
+      </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+          <version>2.17.1</version>
+      </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-annotations</artifactId>
+          <version>2.17.1</version>
+      </dependency>
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.8.9</version>
+      </dependency>
+      </dependencies>
 </project>
