--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-            <source>9</source>
-            <target>9</target>
+            <source>14</source>
+            <target>14</target>
 <!--          <source>21</source>-->
 <!--          <target>21</target>-->
 <!--            <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
@@ -122,9 +122,9 @@
       </dependency>
       <dependency>
           <groupId>org.junit.jupiter</groupId>
-          <artifactId>junit-jupiter</artifactId>
-          <version>RELEASE</version>
-          <scope>compile</scope>
+          <artifactId>junit-jupiter-api</artifactId>
+          <version>5.11.0-M2</version>
+          <scope>test</scope>
       </dependency>
       <dependency>
           <groupId>com.fasterxml.jackson.core</groupId>
