--- a/pom.xml
+++ b/pom.xml
@@ -20,16 +20,17 @@
     <plugins>
         <plugin>
             <artifactId>maven-assembly-plugin</artifactId>
+            <version>3.7.1</version>
             <configuration>
                 <archive>
                     <manifest>
-                        <mainClass>me.qpneruy.timer plugin.TimerPro</mainClass>
+                        <mainClass>me.qpneruy.timerplugin.TimerPro</mainClass>
                     </manifest>
                 </archive>
                 <descriptorRefs>
                     <descriptorRef>jar-with-dependencies</descriptorRef>
                 </descriptorRefs>
-                <outputDirectory>C:\Users\huuti\Desktop\server\plugins</outputDirectory>
+                <outputDirectory>C:\Users\huuti\Desktop\servesr\plugins</outputDirectory>
             </configuration>
             <executions>
                 <execution>
@@ -44,12 +45,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <version>3.13.0</version>
         <configuration>
-            <source>14</source>
-            <target>14</target>
-<!--          <source>21</source>-->
-<!--          <target>21</target>-->
+<!--            <source>16</source>-->
+<!--            <target>16</target>-->
+          <source>21</source>
+          <target>21</target>
 <!--            <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
         </configuration>
       </plugin>
@@ -69,8 +70,7 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
-            <version>3.3.0</version>
-<!--r-->
+            <version>3.4.2</version>
         </plugin>
     </plugins>
     <resources>
@@ -100,13 +100,23 @@
       <dependency>
           <groupId>io.papermc.paper</groupId>
           <artifactId>paper-api</artifactId>
-          <version>1.18.2-R0.1-SNAPSHOT</version>
+          <version>1.20.1-R0.1-SNAPSHOT</version>
           <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-compress</artifactId>
+          <version>1.26.2</version>
+      </dependency>
+      <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>33.2.1-jre</version>
       </dependency>
       <dependency>
           <groupId>net.kyori</groupId>
           <artifactId>adventure-api</artifactId>
-          <version>4.15.0</version>
+          <version>4.17.0</version>
       </dependency>
       <dependency>
           <groupId>me.clip</groupId>
@@ -117,7 +127,7 @@
       <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
-          <version>4.13.1</version>
+          <version>4.13.2</version>
           <scope>compile</scope>
       </dependency>
       <dependency>
@@ -144,7 +154,13 @@
       <dependency>
           <groupId>com.google.code.gson</groupId>
           <artifactId>gson</artifactId>
-          <version>2.8.9</version>
+          <version>2.11.0</version>
       </dependency>
-      </dependencies>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+          <version>24.1.0</version>
+          <scope>compile</scope>
+      </dependency>
+  </dependencies>
 </project>
